[package]
name = "bloomfilter"
version = "1.0.0"
authors = ["howard.huang <howeih@gmail.com>"]
license = "MIT"
homepage = "https://github.com/howeih/bloom_filter"
repository = "https://github.com/howeih/bloom_filter"

[lib]
name = "bloomfilter"
path = "src/bloomfilter/lib.rs"

[dependencies]
bit-vec = "0.4.4"
num_cpus = "1.8.0"
rand = "0.4.2"