[package]
name = "bloomfilter"
version = "1.0.0"
authors = ["howard.huang <howeih@gmail.com>"]
license = "MIT"
repository = "https://github.com/howeih/rust_bloomfilter"
description = "Bloomfilter with worker thread."

[lib]
name = "bloomfilter"
path = "src/lib.rs"

[dependencies]
bit-vec = "0.4.4"
num_cpus = "1.8.0"
rand = "0.4.2"